--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -84,7 +84,7 @@
                 style="@style/Widget.ScienceGenius2025.TextInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Young Scientist Name">
+                android:hint="Young Scientist Email">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etEmail"
