--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -99,7 +99,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/baloo"
                         android:paddingTop="8dp"
-                        android:text="📖 Chapters"
+                        android:text="📖Chapters"
                         android:textAlignment="center"
                         android:textColor="#000"
                         android:textSize="20sp"
@@ -139,7 +139,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/baloo"
                         android:paddingTop="8dp"
-                        android:text="🧊 View Model"
+                        android:text="🧊View Model"
                         android:textAlignment="center"
                         android:textColor="#000"
                         android:textSize="20sp"
@@ -179,7 +179,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/baloo"
                         android:paddingTop="8dp"
-                        android:text="🧠 Quiz"
+                        android:text="🧠Quiz"
                         android:textAlignment="center"
                         android:textColor="#000"
                         android:textSize="20sp"
@@ -215,11 +215,11 @@
                         android:src="@drawable/history_logo" />
 
                     <TextView
-                        android:layout_width="139dp"
+                        android:layout_width="160dp"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/baloo"
                         android:paddingTop="8dp"
-                        android:text="📜 History"
+                        android:text="📜MyProgress"
                         android:textAlignment="center"
                         android:textColor="#000"
                         android:textSize="20sp"
@@ -259,7 +259,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/baloo"
                         android:paddingTop="8dp"
-                        android:text="🆘 Help"
+                        android:text="🆘Help"
                         android:textAlignment="center"
                         android:textColor="#000"
                         android:textSize="20sp"
@@ -299,7 +299,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/baloo"
                         android:paddingTop="8dp"
-                        android:text="👋 Logout"
+                        android:text="👋Logout"
                         android:textAlignment="center"
                         android:textColor="#000"
                         android:textSize="20sp"
