--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -15,8 +15,8 @@
         android:text="Result"
         android:textSize="28sp"
         android:textStyle="bold"
-        android:fontFamily="@font/baloo"
-        android:textColor="#D32F2F"
+        android:fontFamily="@font/comic_font"
+        android:textColor="#026580"
         android:layout_marginBottom="24dp" />
 
     <TextView
@@ -24,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Your Score"
+        android:fontFamily="@font/comic_font"
         android:textSize="24sp"
         android:textColor="#000000"
         android:layout_marginBottom="40dp" />
@@ -33,7 +34,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="🏠 Back to Topics"
-        android:backgroundTint="#D32F2F"
+        android:fontFamily="@font/comic_font"
+        android:backgroundTint="#026580"
         android:textColor="#FFFFFF"
         android:padding="12dp"
         android:textSize="16sp"
